bug correction on build_mosaic - imgpath variable

--- a/nbs/00_forensicface.ipynb
+++ b/nbs/00_forensicface.ipynb
@@ -392,13 +392,10 @@
     "\n",
     "        imgs = []\n",
     "        list_of_arrays = False\n",
-    "        for img_path in img_path_list:\n",
-    "            if type(img_path) == str:  # image path passed as argument\n",
-    "                bgr_img = cv2.imread(imgpath)\n",
-    "            else:  # image array passed as argument\n",
+    "        for img in img_path_list:\n",
+    "            if type(img) != str:  # image array passed as argument\n",
     "                list_of_arrays = True\n",
-    "                bgr_img = img_path.copy()\n",
-    "            ret = self.process_image_single_face(bgr_img)\n",
+    "            ret = self.process_image_single_face(img)\n",
     "            if len(ret) > 0:\n",
     "                img = cv2.cvtColor(ret[\"aligned_face\"], cv2.COLOR_RGB2BGR)\n",
     "                img = cv2.copyMakeBorder(\n",
@@ -454,15 +451,24 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/rafael/miniconda3/envs/ffdev/lib/python3.10/site-packages/insightface/utils/transform.py:68: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
+      "  P = np.linalg.lstsq(X_homo, Y)[0].T # Affine matrix. 3 x 4\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "(dict_keys(['keypoints', 'ipd', 'embedding', 'norm', 'bbox', 'aligned_face', 'gender', 'age', 'pitch', 'yaw', 'roll', 'fiqa_score']),\n",
        " array([[467.3665 , 681.6384 ],\n",
-       "        [772.4218 , 677.03107],\n",
+       "        [772.4217 , 677.03107],\n",
        "        [625.37726, 836.4494 ],\n",
        "        [504.2984 , 992.18964],\n",
        "        [751.0406 , 985.683  ]], dtype=float32),\n",
-       " 305.09012,\n",
+       " 305.09,\n",
        " (512,))"
       ]
      },
