more robust frame count in videos

--- a/nbs/00_forensicface.ipynb
+++ b/nbs/00_forensicface.ipynb
@@ -79,9 +79,11 @@
     "                    \"cr_fiqa\",\n",
     "                    \"cr_fiqa_l.onnx\",\n",
     "                ),\n",
-    "                providers=[(\"CUDAExecutionProvider\", {\"device_id\": gpu})]\n",
-    "                if use_gpu\n",
-    "                else [\"CPUExecutionProvider\"],\n",
+    "                providers=(\n",
+    "                    [(\"CUDAExecutionProvider\", {\"device_id\": gpu})]\n",
+    "                    if use_gpu\n",
+    "                    else [\"CPUExecutionProvider\"]\n",
+    "                ),\n",
     "            )\n",
     "        else:\n",
     "            allowed_modules = [\"detection\"]\n",
@@ -93,9 +95,11 @@
     "        self.detectmodel = FaceAnalysis(\n",
     "            name=model,\n",
     "            allowed_modules=allowed_modules,\n",
-    "            providers=[(\"CUDAExecutionProvider\", {\"device_id\": gpu})]\n",
-    "            if use_gpu\n",
-    "            else [\"CPUExecutionProvider\"],\n",
+    "            providers=(\n",
+    "                [(\"CUDAExecutionProvider\", {\"device_id\": gpu})]\n",
+    "                if use_gpu\n",
+    "                else [\"CPUExecutionProvider\"]\n",
+    "            ),\n",
     "        )\n",
     "        self.detectmodel.prepare(ctx_id=gpu if use_gpu else -1, det_size=self.det_size)\n",
     "\n",
@@ -110,9 +114,11 @@
     "        assert len(onnx_rec_model) == 1\n",
     "        self.ort_ada = onnxruntime.InferenceSession(\n",
     "            onnx_rec_model[0],\n",
-    "            providers=[(\"CUDAExecutionProvider\", {\"device_id\": gpu})]\n",
-    "            if use_gpu\n",
-    "            else [\"CPUExecutionProvider\"],\n",
+    "            providers=(\n",
+    "                [(\"CUDAExecutionProvider\", {\"device_id\": gpu})]\n",
+    "                if use_gpu\n",
+    "                else [\"CPUExecutionProvider\"]\n",
+    "            ),\n",
     "        )\n",
     "\n",
     "    def _to_input_ada(self, aligned_bgr_img):\n",
@@ -820,16 +826,16 @@
     "        bar_format=\"Frames processed: {n}/{total} | Time elapsed: {elapsed}\",\n",
     "    ) as pbar:\n",
     "        while True:\n",
-    "            if (current_frame % every_n_frames) != 0:\n",
-    "                current_frame = current_frame + 1\n",
-    "                continue\n",
     "\n",
-    "            vs.set(cv2.CAP_PROP_POS_FRAMES, current_frame)\n",
     "            ret, frame = vs.read()\n",
     "\n",
     "            if not ret:\n",
     "                break\n",
+    "\n",
     "            current_frame = current_frame + 1\n",
+    "            if (current_frame % every_n_frames) != 0:\n",
+    "                continue\n",
+    "\n",
     "            (h, w) = frame.shape[:2]\n",
     "\n",
     "            faces = self.detectmodel.get(frame)\n",
@@ -884,13 +890,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Frames processed: 90/None | Time elapsed: 00:06\n"
+      "Frames processed: 0/4973 | Time elapsed: 00:00"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/rafael/miniconda3/envs/ffdev/lib/python3.10/site-packages/insightface/utils/transform.py:68: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
+      "  P = np.linalg.lstsq(X_homo, Y)[0].T # Affine matrix. 3 x 4\n",
+      "Frames processed: 4973/4973 | Time elapsed: 01:22\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "80"
+       "2011"
       ]
      },
      "execution_count": null,
@@ -902,7 +918,7 @@
     "ff.extract_faces(\n",
     "    video_path=\"/home/rafael/video/video.mp4\",\n",
     "    start_from=0,\n",
-    "    every_n_frames=100,\n",
+    "    every_n_frames=1,\n",
     "    dest_folder=\"/home/rafael/video_faces\",\n",
     ")"
    ]
