expose det_thresh parameter and return det_score

--- a/nbs/00_forensicface.ipynb
+++ b/nbs/00_forensicface.ipynb
@@ -57,6 +57,7 @@
     "        use_gpu: bool = True,\n",
     "        gpu: int = 0,  # which GPU to use\n",
     "        extended=True,\n",
+    "        det_thresh: float = 0.5,\n",
     "    ):\n",
     "        \"\"\"\n",
     "        A face comparison tool for forensic analysis and comparison of facial images.\n",
@@ -66,8 +67,8 @@
     "        - det_size (int): The size of the input images for face detection (default: 320).\n",
     "        - use_gpu (bool): Whether to use a GPU for inference (default: True).\n",
     "        - gpu (int): The ID of the GPU to use (default: 0).\n",
-    "        - magface (bool): Whether to use MagFace for face recognition (default: False).\n",
     "        - extended (bool): Whether to use extended modules (detection, landmark_3d_68, genderage) (default: True).\n",
+    "        - det_thresh (float): threshold for the face detector (default = 0.5).\n",
     "        \"\"\"\n",
     "        self.extended = extended\n",
     "        if self.extended == True:\n",
@@ -89,6 +90,7 @@
     "            allowed_modules = [\"detection\"]\n",
     "\n",
     "        self.det_size = (det_size, det_size)\n",
+    "        self.det_thresh = det_thresh\n",
     "\n",
     "        self.model = model\n",
     "\n",
@@ -101,7 +103,11 @@
     "                else [\"CPUExecutionProvider\"]\n",
     "            ),\n",
     "        )\n",
-    "        self.detectmodel.prepare(ctx_id=gpu if use_gpu else -1, det_size=self.det_size)\n",
+    "        self.detectmodel.prepare(\n",
+    "            ctx_id=gpu if use_gpu else -1,\n",
+    "            det_size=self.det_size,\n",
+    "            det_thresh=self.det_thresh,\n",
+    "        )\n",
     "\n",
     "        onnx_rec_model = glob(\n",
     "            osp.join(\n",
@@ -222,12 +228,7 @@
     "\n",
     "                - 'roll': A float representing the roll angle for each face in the image.\n",
     "\n",
-    "                If the 'magface' attribute is set to True, the dictionary will also contain the following keys:\n",
-    "                - 'magface_embedding': A 1D numpy array of shape (512,) containing the magface\n",
-    "                                          embedding for each face in the image.\n",
-    "\n",
-    "                - 'magface_norm': A float representing the L2 norm of the magface embedding for\n",
-    "                                     each face in the image.\n",
+    "                - 'det_score': A float representing the face detection score.\n",
     "        \"\"\"\n",
     "        if type(imgpath) == str:  # image path passed as argument\n",
     "            bgr_img = cv2.imread(imgpath)\n",
@@ -242,6 +243,7 @@
     "        bbox = faces[idx].bbox.astype(\"int\")\n",
     "        bgr_aligned_face = face_align.norm_crop(bgr_img, kps)\n",
     "        ipd = np.linalg.norm(kps[0] - kps[1])\n",
+    "        det_score = faces[idx].det_score\n",
     "\n",
     "        ada_inputs = {\n",
     "            self.ort_ada.get_inputs()[0].name: self._to_input_ada(bgr_aligned_face)\n",
@@ -254,6 +256,7 @@
     "            \"embedding\": normalized_embedding.flatten() * norm.flatten()[0],\n",
     "            \"norm\": norm.flatten()[0],\n",
     "            \"bbox\": bbox,\n",
+    "            \"det_score\": det_score,\n",
     "            \"aligned_face\": cv2.cvtColor(bgr_aligned_face, cv2.COLOR_BGR2RGB),\n",
     "        }\n",
     "\n",
@@ -317,12 +320,9 @@
     "\n",
     "            - 'roll: A float representing the roll angle for each face in the image.\n",
     "\n",
-    "         If the 'magface' attribute is set to True, the dictionary will also contain the following keys:\n",
-    "            - 'magface_embedding': A 1D numpy array of shape (512,) containing the magface\n",
-    "                                    embedding for each face in the image.\n",
+    "            - 'fiqa_score': A float representing image quality estimated by the CR-FIQA(L) model (https://doi.org/10.1109/CVPR52729.2023.00565).\n",
     "\n",
-    "            - 'magface_norm': A float representing the L2 norm of the magface embedding for\n",
-    "                                each face in the image.\n",
+    "            - 'det_score': A float representing the face detection score\n",
     "\n",
     "        Args:\n",
     "            - imgpath (str): The file path to the image to be processed.\n",
@@ -343,6 +343,7 @@
     "            bbox = face.bbox.astype(\"int\")\n",
     "            bgr_aligned_face = face_align.norm_crop(bgr_img, kps)\n",
     "            ipd = np.linalg.norm(kps[0] - kps[1])\n",
+    "            det_score = face.det_score\n",
     "            ada_inputs = {\n",
     "                self.ort_ada.get_inputs()[0].name: self._to_input_ada(bgr_aligned_face)\n",
     "            }\n",
@@ -353,6 +354,7 @@
     "                \"embedding\": normalized_embedding.flatten() * norm.flatten()[0],\n",
     "                \"norm\": norm.flatten()[0],\n",
     "                \"bbox\": bbox,\n",
+    "                \"det_score\": det_score,\n",
     "                \"aligned_face\": cv2.cvtColor(bgr_aligned_face, cv2.COLOR_BGR2RGB),\n",
     "            }\n",
     "\n",
@@ -448,7 +450,7 @@
     }
    ],
    "source": [
-    "ff = ForensicFace(use_gpu=True, extended=True)"
+    "ff = ForensicFace(use_gpu=True, extended=True, det_thresh=0.5)"
    ]
   },
   {
@@ -468,14 +470,15 @@
     {
      "data": {
       "text/plain": [
-       "(dict_keys(['keypoints', 'ipd', 'embedding', 'norm', 'bbox', 'aligned_face', 'gender', 'age', 'pitch', 'yaw', 'roll', 'fiqa_score']),\n",
+       "(dict_keys(['keypoints', 'ipd', 'embedding', 'norm', 'bbox', 'det_score', 'aligned_face', 'gender', 'age', 'pitch', 'yaw', 'roll', 'fiqa_score']),\n",
        " array([[467.3665 , 681.6384 ],\n",
-       "        [772.4217 , 677.03107],\n",
+       "        [772.4218 , 677.03107],\n",
        "        [625.37726, 836.4494 ],\n",
        "        [504.2984 , 992.18964],\n",
        "        [751.0406 , 985.683  ]], dtype=float32),\n",
-       " 305.09,\n",
-       " (512,))"
+       " 305.09012,\n",
+       " (512,),\n",
+       " 0.8175981)"
       ]
      },
      "execution_count": null,
@@ -485,7 +488,9 @@
    ],
    "source": [
     "result = ff.process_image_single_face(\"001_frontal.jpg\")\n",
-    "result.keys(), result[\"keypoints\"], result[\"ipd\"], result[\"embedding\"].shape"
+    "result.keys(), result[\"keypoints\"], result[\"ipd\"], result[\"embedding\"].shape, result[\n",
+    "    \"det_score\"\n",
+    "]"
    ]
   },
   {
@@ -525,13 +530,14 @@
     {
      "data": {
       "text/plain": [
-       "(dict_keys(['keypoints', 'ipd', 'embedding', 'norm', 'bbox', 'aligned_face', 'gender', 'age', 'pitch', 'yaw', 'roll', 'fiqa_score']),\n",
+       "(dict_keys(['keypoints', 'ipd', 'embedding', 'norm', 'bbox', 'det_score', 'aligned_face', 'gender', 'age', 'pitch', 'yaw', 'roll', 'fiqa_score']),\n",
        " array([[471.42743, 418.60498],\n",
        "        [522.68933, 418.05362],\n",
        "        [498.82196, 449.08923],\n",
        "        [479.3499 , 476.44193],\n",
        "        [514.33453, 476.06885]], dtype=float32),\n",
-       " array([441, 355, 548, 506]))"
+       " array([441, 355, 548, 506]),\n",
+       " 0.8962144)"
       ]
      },
      "execution_count": null,
@@ -541,7 +547,7 @@
    ],
    "source": [
     "results = ff.process_image_multiple_faces(\"tela.png\")\n",
-    "results[0].keys(), results[0][\"keypoints\"], results[0][\"bbox\"]"
+    "results[0].keys(), results[0][\"keypoints\"], results[0][\"bbox\"], results[0][\"det_score\"]"
    ]
   },
   {
@@ -589,7 +595,7 @@
     {
      "data": {
       "text/plain": [
-       "0.85562766"
+       "0.8556277"
       ]
      },
      "execution_count": null,
