add utils.freeze_env and ff.environment

--- a/nbs/00_forensicface.ipynb
+++ b/nbs/00_forensicface.ipynb
@@ -35,7 +35,8 @@
     "from imutils import build_montages\n",
     "from insightface.app import FaceAnalysis\n",
     "from insightface.utils import face_align\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "from forensicface.utils import freeze_env"
    ]
   },
   {
@@ -126,6 +127,8 @@
     "                else [\"CPUExecutionProvider\"]\n",
     "            ),\n",
     "        )\n",
+    "\n",
+    "        self.environment = freeze_env()\n",
     "\n",
     "    def _to_input_ada(self, aligned_bgr_img):\n",
     "        \"\"\"\n",
@@ -451,6 +454,135 @@
    ],
    "source": [
     "ff = ForensicFace(use_gpu=True, extended=True, det_thresh=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Python version': '3.10.11 (main, May 16 2023, 00:28:57) [GCC 11.2.0]',\n",
+       " 'albumentations': '1.3.1',\n",
+       " 'asttokens': '2.2.1',\n",
+       " 'astunparse': '1.6.3',\n",
+       " 'backcall': '0.2.0',\n",
+       " 'backports.functools-lru-cache': '1.6.4',\n",
+       " 'bleach': '6.0.0',\n",
+       " 'certifi': '2023.5.7',\n",
+       " 'cffi': '1.15.1',\n",
+       " 'charset-normalizer': '3.1.0',\n",
+       " 'coloredlogs': '15.0.1',\n",
+       " 'contourpy': '1.1.0',\n",
+       " 'cryptography': '41.0.1',\n",
+       " 'cycler': '0.11.0',\n",
+       " 'Cython': '0.29.35',\n",
+       " 'debugpy': '1.5.1',\n",
+       " 'decorator': '5.1.1',\n",
+       " 'docutils': '0.20.1',\n",
+       " 'easydict': '1.10',\n",
+       " 'entrypoints': '0.4',\n",
+       " 'execnb': '0.1.5',\n",
+       " 'executing': '1.2.0',\n",
+       " 'fastcore': '1.5.29',\n",
+       " 'flatbuffers': '23.5.26',\n",
+       " 'fonttools': '4.40.0',\n",
+       " 'forensicface': '0.3.6',\n",
+       " 'ghapi': '1.0.4',\n",
+       " 'humanfriendly': '10.0',\n",
+       " 'idna': '3.4',\n",
+       " 'imageio': '2.31.1',\n",
+       " 'importlib-metadata': '6.7.0',\n",
+       " 'imutils': '0.5.4',\n",
+       " 'insightface': '0.7.3',\n",
+       " 'ipykernel': '6.15.0',\n",
+       " 'ipython': '8.14.0',\n",
+       " 'jaraco.classes': '3.2.3',\n",
+       " 'jedi': '0.18.2',\n",
+       " 'jeepney': '0.8.0',\n",
+       " 'joblib': '1.2.0',\n",
+       " 'jupyter-client': '7.3.4',\n",
+       " 'jupyter-core': '5.3.1',\n",
+       " 'jupyterlab-quarto': '0.2.8',\n",
+       " 'keyring': '24.0.0',\n",
+       " 'kiwisolver': '1.4.4',\n",
+       " 'lazy-loader': '0.2',\n",
+       " 'markdown-it-py': '3.0.0',\n",
+       " 'matplotlib': '3.7.1',\n",
+       " 'matplotlib-inline': '0.1.6',\n",
+       " 'mdurl': '0.1.2',\n",
+       " 'more-itertools': '9.1.0',\n",
+       " 'mpmath': '1.3.0',\n",
+       " 'nbdev': '2.3.27',\n",
+       " 'nest-asyncio': '1.5.6',\n",
+       " 'networkx': '3.1',\n",
+       " 'numpy': '1.25.0',\n",
+       " 'onnx': '1.14.0',\n",
+       " 'onnxruntime-gpu': '1.15.0',\n",
+       " 'opencv-python-headless': '4.7.0.72',\n",
+       " 'packaging': '23.1',\n",
+       " 'pandas': '2.0.2',\n",
+       " 'parso': '0.8.3',\n",
+       " 'pexpect': '4.8.0',\n",
+       " 'pickleshare': '0.7.5',\n",
+       " 'Pillow': '9.5.0',\n",
+       " 'pip': '23.1.2',\n",
+       " 'pkginfo': '1.9.6',\n",
+       " 'platformdirs': '3.6.0',\n",
+       " 'prettytable': '3.8.0',\n",
+       " 'prompt-toolkit': '3.0.38',\n",
+       " 'protobuf': '4.23.3',\n",
+       " 'psutil': '5.9.0',\n",
+       " 'ptyprocess': '0.7.0',\n",
+       " 'pure-eval': '0.2.2',\n",
+       " 'pycparser': '2.21',\n",
+       " 'Pygments': '2.15.1',\n",
+       " 'pyparsing': '3.1.0',\n",
+       " 'python-dateutil': '2.8.2',\n",
+       " 'pytz': '2023.3',\n",
+       " 'PyWavelets': '1.4.1',\n",
+       " 'PyYAML': '6.0',\n",
+       " 'pyzmq': '25.1.0',\n",
+       " 'qudida': '0.0.4',\n",
+       " 'readme-renderer': '40.0',\n",
+       " 'requests': '2.31.0',\n",
+       " 'requests-toolbelt': '1.0.0',\n",
+       " 'rfc3986': '2.0.0',\n",
+       " 'rich': '13.4.2',\n",
+       " 'scikit-image': '0.21.0',\n",
+       " 'scikit-learn': '1.2.2',\n",
+       " 'scipy': '1.10.1',\n",
+       " 'seaborn': '0.13.2',\n",
+       " 'SecretStorage': '3.3.3',\n",
+       " 'setuptools': '67.8.0',\n",
+       " 'six': '1.16.0',\n",
+       " 'stack-data': '0.6.2',\n",
+       " 'sympy': '1.12',\n",
+       " 'threadpoolctl': '3.1.0',\n",
+       " 'tifffile': '2023.4.12',\n",
+       " 'tornado': '6.1',\n",
+       " 'tqdm': '4.65.0',\n",
+       " 'traitlets': '5.9.0',\n",
+       " 'twine': '4.0.2',\n",
+       " 'typing-extensions': '4.6.3',\n",
+       " 'tzdata': '2023.3',\n",
+       " 'urllib3': '2.0.3',\n",
+       " 'watchdog': '3.0.0',\n",
+       " 'wcwidth': '0.2.6',\n",
+       " 'webencodings': '0.5.1',\n",
+       " 'wheel': '0.38.4',\n",
+       " 'zipp': '3.15.0'}"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ff.environment"
    ]
   },
   {
