add option to annotate aligned_face with keypoints

--- a/nbs/01_utils.ipynb
+++ b/nbs/01_utils.ipynb
@@ -411,6 +411,82 @@
     "\n",
     "freeze_env()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | export\n",
+    "\n",
+    "\n",
+    "def transform_keypoints(keypoints, M):\n",
+    "    \"\"\"\n",
+    "    Transforms keypoints from the original image space to the aligned image space.\n",
+    "\n",
+    "    Args:\n",
+    "        keypoints (numpy array): A 2D array of shape (5, 2) representing the original keypoints.\n",
+    "        M (numpy array): The 2x3 affine transformation matrix.\n",
+    "\n",
+    "    Returns:\n",
+    "        numpy array: A 2D array of shape (5, 2) representing the transformed keypoints.\n",
+    "    \"\"\"\n",
+    "    # Add a third dimension of ones to keypoints to allow affine transformation\n",
+    "    keypoints_homo = np.hstack([keypoints, np.ones((keypoints.shape[0], 1))])\n",
+    "    transformed_keypoints = (M @ keypoints_homo.T).T  # Apply affine transformation\n",
+    "    return transformed_keypoints"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | export\n",
+    "def annotate_img_with_kps(\n",
+    "    bgr_img: np.ndarray, kps: np.ndarray, color: str = \"red\", radius: int = 2\n",
+    ") -> np.ndarray:\n",
+    "    \"\"\"\n",
+    "    Annotate an image with keypoints.\n",
+    "\n",
+    "    Parameters:\n",
+    "    bgr_img (numpy.ndarray): The input image in BGR format.\n",
+    "    kps (numpy.ndarray): A numpy array of shape (5, 2) containing the keypoints.\n",
+    "    color (str, optional): The color of the keypoints. Default is 'red'.\n",
+    "                        Options are 'red', 'blue', 'green', 'white', 'black'.\n",
+    "    radius (int, optional): The radius of the keypoints. Default is 2.\n",
+    "\n",
+    "    Returns:\n",
+    "    numpy.ndarray: The image with keypoints annotated.\n",
+    "    \"\"\"\n",
+    "    import cv2\n",
+    "\n",
+    "    colors = {\n",
+    "        \"red\": (0, 0, 255),\n",
+    "        \"blue\": (255, 0, 0),\n",
+    "        \"green\": (0, 255, 0),\n",
+    "        \"white\": (255, 255, 255),\n",
+    "        \"black\": (0, 0, 0),\n",
+    "    }\n",
+    "\n",
+    "    assert color in colors.keys()\n",
+    "    assert kps.shape == (5, 2)\n",
+    "\n",
+    "    bgr_img_with_kps = bgr_img.copy()\n",
+    "\n",
+    "    for x, y in kps:\n",
+    "        cv2.circle(\n",
+    "            bgr_img_with_kps,\n",
+    "            (int(x), int(y)),\n",
+    "            radius=radius,\n",
+    "            color=colors[color],\n",
+    "            thickness=-1,\n",
+    "        )\n",
+    "\n",
+    "    return bgr_img_with_kps"
+   ]
   }
  ],
  "metadata": {
