add option to annotate keypoints in build_mosaic

--- a/nbs/00_forensicface.ipynb
+++ b/nbs/00_forensicface.ipynb
@@ -399,7 +399,14 @@
     "\n",
     "        return ret\n",
     "\n",
-    "    def build_mosaic(self, img_path_list, mosaic_shape, border=0.03, save_to=None):\n",
+    "    def build_mosaic(\n",
+    "        self,\n",
+    "        img_path_list,\n",
+    "        mosaic_shape,\n",
+    "        border=0.03,\n",
+    "        save_to=None,\n",
+    "        draw_keypoints=False,\n",
+    "    ):\n",
     "        \"\"\"\n",
     "        Build a rectangular mosaic of the aligned faces.\n",
     "        Based on the imutils build_montages function.\n",
@@ -423,7 +430,7 @@
     "        for img in img_path_list:\n",
     "            if type(img) != str:  # image array passed as argument\n",
     "                list_of_arrays = True\n",
-    "            ret = self.process_image_single_face(img)\n",
+    "            ret = self.process_image_single_face(img, draw_keypoints)\n",
     "            if len(ret) > 0:\n",
     "                img = cv2.cvtColor(ret[\"aligned_face\"], cv2.COLOR_RGB2BGR)\n",
     "                img = cv2.copyMakeBorder(\n",
