add option to save metadata when exporting faces from video

--- a/nbs/00_forensicface.ipynb
+++ b/nbs/00_forensicface.ipynb
@@ -954,6 +954,7 @@
     "    every_n_frames: int = 1,  # skip some frames\n",
     "    margin: float = 2.0,  # margin to add to each face, w.r.t. detected bounding box\n",
     "    start_from: float = 0.0,  # seconds after video start to begin processing\n",
+    "    export_metadata: bool = False,  # if True, export facial keypoints, bounding box, ipd, fiqa_score, pitch, yaw, roll, and embedding\n",
     "):\n",
     "    \"\"\"\n",
     "    Extracts faces from a video and saves them as individual images.\n",
@@ -968,6 +969,8 @@
     "    Returns:\n",
     "        The number of extracted faces.\n",
     "    \"\"\"\n",
+    "    import pandas as pd\n",
+    "\n",
     "    if dest_folder is None:\n",
     "        dest_folder = os.path.splitext(video_path)[0]\n",
     "\n",
@@ -983,6 +986,8 @@
     "    vs.set(cv2.CAP_PROP_POS_FRAMES, start_frame)\n",
     "    current_frame = start_frame\n",
     "    nfaces = 0\n",
+    "    if export_metadata:\n",
+    "        metadata = []\n",
     "    with tqdm(\n",
     "        total=total_frames,\n",
     "        bar_format=\"Frames processed: {n}/{total} | Time elapsed: {elapsed}\",\n",
@@ -1000,13 +1005,14 @@
     "\n",
     "            (h, w) = frame.shape[:2]\n",
     "\n",
-    "            faces = self.detectmodel.get(frame)\n",
-    "            for i, face in enumerate(faces):\n",
-    "                startX, startY, endX, endY = face.bbox.astype(\"int\")\n",
+    "            # faces = self.detectmodel.get(frame)\n",
+    "            rets = self.process_image_multiple_faces(frame)\n",
+    "            for i, ret in enumerate(rets):\n",
+    "                startX, startY, endX, endY = ret[\"bbox\"]\n",
     "                faceW = endX - startX\n",
     "                faceH = endY - startY\n",
     "                outBbox = self._get_extended_bbox(\n",
-    "                    face.bbox, frame.shape, margin_factor=margin\n",
+    "                    ret[\"bbox\"], frame.shape, margin_factor=margin\n",
     "                )\n",
     "                # export the face (with added margin)\n",
     "                face_crop = frame[outBbox[1] : outBbox[3], outBbox[0] : outBbox[2]]\n",
@@ -1014,9 +1020,29 @@
     "                    dest_folder, f\"frame_{current_frame:07}_face_{i:02}.png\"\n",
     "                )\n",
     "                cv2.imwrite(face_img_path, face_crop)\n",
+    "                if export_metadata:\n",
+    "                    metadata.append(\n",
+    "                        {\n",
+    "                            **{\"frame\": current_frame, \"face\": i},\n",
+    "                            **{\n",
+    "                                k: v\n",
+    "                                for k, v in ret.items()\n",
+    "                                if k not in [\"norm\", \"det_score\", \"aligned_face\"]\n",
+    "                            },\n",
+    "                        }\n",
+    "                    )\n",
     "                nfaces += 1\n",
     "            pbar.update(1)\n",
     "    vs.release()\n",
+    "    if export_metadata:\n",
+    "        pd.DataFrame(metadata).to_json(\n",
+    "            os.path.join(\n",
+    "                dest_folder,\n",
+    "                os.path.splitext(os.path.basename(video_path))[0] + \".jsonl\",\n",
+    "            ),\n",
+    "            lines=True,\n",
+    "            orient=\"records\",\n",
+    "        )\n",
     "    return nfaces"
    ]
   },
@@ -1052,23 +1078,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Frames processed: 0/4973 | Time elapsed: 00:00"
+      "Frames processed: 0/14 | Time elapsed: 00:00"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/rafael/miniconda3/envs/ffdev/lib/python3.10/site-packages/insightface/utils/transform.py:68: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
-      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
-      "  P = np.linalg.lstsq(X_homo, Y)[0].T # Affine matrix. 3 x 4\n",
-      "Frames processed: 4973/4973 | Time elapsed: 01:22\n"
+      "Frames processed: 14/14 | Time elapsed: 00:53\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "2011"
+       "12"
       ]
      },
      "execution_count": null,
@@ -1080,8 +1103,9 @@
     "ff.extract_faces(\n",
     "    video_path=\"/home/rafael/video/video.mp4\",\n",
     "    start_from=0,\n",
-    "    every_n_frames=200,\n",
+    "    every_n_frames=600,\n",
     "    dest_folder=\"/home/rafael/video_faces\",\n",
+    "    export_metadata=True,\n",
     ")"
    ]
   },
