--- a/_proc/00_forensicface.ipynb
+++ b/_proc/00_forensicface.ipynb
@@ -643,7 +643,8 @@
        "\n",
        ">      ForensicFace.extract_faces (video_path:str, dest_folder:str=None,\n",
        ">                                  every_n_frames:int=1, margin:float=2.0,\n",
-       ">                                  start_from:float=0.0)\n",
+       ">                                  start_from:float=0.0,\n",
+       ">                                  export_metadata:bool=False)\n",
        "\n",
        "*Extracts faces from a video and saves them as individual images.\n",
        "\n",
@@ -663,7 +664,8 @@
        "| dest_folder | str | None | folder used to save extracted faces. If not provided, a new folder with the video name is created |\n",
        "| every_n_frames | int | 1 | skip some frames |\n",
        "| margin | float | 2.0 | margin to add to each face, w.r.t. detected bounding box |\n",
-       "| start_from | float | 0.0 | seconds after video start to begin processing |"
+       "| start_from | float | 0.0 | seconds after video start to begin processing |\n",
+       "| export_metadata | bool | False | if True, export facial keypoints, bounding box, ipd, fiqa_score, pitch, yaw, roll, and embedding |"
       ],
       "text/plain": [
        "---\n",
@@ -674,7 +676,8 @@
        "\n",
        ">      ForensicFace.extract_faces (video_path:str, dest_folder:str=None,\n",
        ">                                  every_n_frames:int=1, margin:float=2.0,\n",
-       ">                                  start_from:float=0.0)\n",
+       ">                                  start_from:float=0.0,\n",
+       ">                                  export_metadata:bool=False)\n",
        "\n",
        "*Extracts faces from a video and saves them as individual images.\n",
        "\n",
@@ -694,7 +697,8 @@
        "| dest_folder | str | None | folder used to save extracted faces. If not provided, a new folder with the video name is created |\n",
        "| every_n_frames | int | 1 | skip some frames |\n",
        "| margin | float | 2.0 | margin to add to each face, w.r.t. detected bounding box |\n",
-       "| start_from | float | 0.0 | seconds after video start to begin processing |"
+       "| start_from | float | 0.0 | seconds after video start to begin processing |\n",
+       "| export_metadata | bool | False | if True, export facial keypoints, bounding box, ipd, fiqa_score, pitch, yaw, roll, and embedding |"
       ]
      },
      "execution_count": 5,
@@ -744,23 +748,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Frames processed: 0/4973 | Time elapsed: 00:00"
+      "Frames processed: 0/14 | Time elapsed: 00:00"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/rafael/miniconda3/envs/ffdev/lib/python3.10/site-packages/insightface/utils/transform.py:68: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
-      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
-      "  P = np.linalg.lstsq(X_homo, Y)[0].T # Affine matrix. 3 x 4\n",
-      "Frames processed: 4973/4973 | Time elapsed: 01:22\n"
+      "Frames processed: 14/14 | Time elapsed: 00:53\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "2011"
+       "12"
       ]
      },
      "execution_count": null,
@@ -772,8 +773,9 @@
     "ff.extract_faces(\n",
     "    video_path=\"/home/rafael/video/video.mp4\",\n",
     "    start_from=0,\n",
-    "    every_n_frames=200,\n",
+    "    every_n_frames=600,\n",
     "    dest_folder=\"/home/rafael/video_faces\",\n",
+    "    export_metadata=True,\n",
     ")"
    ]
   },
@@ -795,7 +797,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L629){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L655){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.process_aligned_face_image\n",
        "\n",
@@ -804,7 +806,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L629){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L655){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.process_aligned_face_image\n",
        "\n",
